Updates from Overleaf

--- a/Sadeghi_Mahdiar_CCSP2019PhDQuals/main.tex
+++ b/Sadeghi_Mahdiar_CCSP2019PhDQuals/main.tex
@@ -99,8 +99,7 @@ The wireless sensor network is appropriate because:
 % ============================================================================
 % SITE SURVEY WITH IMAGES
 % ============================================================================
-% Insert this AFTER Section 1 (Problem Definition) ends
-% BEFORE Section 2 (Deployment Scenario) starts
+
 
 \clearpage
 
@@ -116,7 +115,7 @@ Field observations conducted January~28, 2026 at Northeastern University Snell L
 % ----------------------------------------------------------------------------
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=0.85\textwidth]{snell_glass_room.jpg}
+\includegraphics[width=0.85\textwidth]{snell_glass_room..jpg}
 \caption{\textbf{Snell Library 4th Floor Glass Study Room -- Poorly-Placed Quiet Zone:} All-glass construction (floor-to-ceiling glass walls visible on multiple sides) allows visual transparency but provides minimal acoustic isolation (estimated STC 26--28 per typical tempered glass specifications). Room surrounded by open corridor with foot traffic and adjacent open workspaces (visible through glass). Despite posted ``quiet zone'' designation, predicted baseline: 42--48~dBA due to noise transmission through glass and proximity to high-traffic areas. Validates core problem: architectural decisions (glass for openness/visibility) conflict with acoustic requirements (<40~dBA standard). WiFi infrastructure visible (ceiling-mounted access points), standard power outlets accessible. This represents target deployment environment for sensor validation -- system should detect elevated baseline and flag for facility management review.}
 \label{fig:glass_room}
 \end{figure}
